# ic_side_services

./: .gitignore  Cargo.toml  canister_ids.json  deploy.sh  dfx.json  generate-flux-types.sh
flux/: openapi.yaml
ic-http-request-executor/: .env.example  Dockerfile  bun.lockb  index.ts  package.json
ic-http-request-executor/src/canister/declarations/ic_side_services_backend/: ic_side_services_backend.did.d.ts  ic_side_services_backend.did.js  index.d.ts  index.js
ic-http-request-executor/src/canister/declarations/orchestrator_canister/: index.d.ts  index.js
ic-http-request-executor/src/canister/declarations/proxy_canister/: proxy_canister.did.d.ts  proxy_canister.did.js
scripts/: download-pocket-ic.sh  integration-test.sh  test.sh
src/flux_types/: Cargo.toml
src/flux_types/src/: lib.rs
src/flux_types/src/models/: active_login_phrases_200_response.rs  active_login_phrases_200_response_data_inner.rs  add_multi_sig_address_post_request.rs  add_node_200_response.rs  addmultisigaddress_200_response.rs  allow_port_api_200_response.rs  allow_port_api_200_response_data.rs  app_changes_200_response.rs  app_changes_200_response_data_inner.rs  app_exec_request.rs  app_inspect_200_response.rs  app_inspect_200_response_data.rs  app_inspect_200_response_data_config.rs  app_inspect_200_response_data_config_labels.rs  app_inspect_200_response_data_graph_driver.rs  app_inspect_200_response_data_graph_driver_data.rs  app_inspect_200_response_data_host_config.rs  app_inspect_200_response_data_host_config_log_config.rs  app_inspect_200_response_data_host_config_port_bindings.rs  app_inspect_200_response_data_host_config_port_bindings_7396_tcp_inner.rs  app_inspect_200_response_data_host_config_restart_policy.rs  app_inspect_200_response_data_host_config_ulimits_inner.rs  app_inspect_200_response_data_network_settings.rs  app_inspect_200_response_data_network_settings_networks.rs  app_inspect_200_response_data_network_settings_ports_value_inner.rs  app_inspect_200_response_data_network_settings_secondary_ip_addresses_inner.rs  app_inspect_200_response_data_state.rs  app_logs_200_response.rs  app_logs_line_parameter.rs  app_top_200_response.rs  app_top_200_response_data.rs  appname.rs  appname_compose_inner.rs  appregister_200_response.rs  appregister_request.rs  appremove_200_response.rs  apps_resources_200_response.rs  appslocation_inner.rs  appspecification.rs  appsresources.rs  (+333 more)
src/http_over_ws/: Cargo.toml
src/http_over_ws/src/: client_proxy.rs  clients.rs  handlers.rs  http_connection.rs  lib.rs  state.rs  types.rs
src/http_over_ws/tests/: integration_test.rs  integration_tests.rs
src/http_over_ws/tests/test_canister/: Cargo.toml  test_canister.did
src/http_over_ws/tests/test_canister/src/: canister.rs  lib.rs
src/http_over_ws/tests/utils/: actor.rs  constants.rs  ic_env.rs  mod.rs  proxy_client.rs  ws_proxy.rs
src/ic_side_services_backend/: Cargo.toml  ic_side_services_backend.did
src/ic_side_services_backend/src/: ecdsa_api.rs  flux.rs  flux_api.rs  http_over_ws.rs  http_over_ws_endpoints.rs  lib.rs  logger.rs  utils.rs  ws.rs
src/ic_side_services_backend/src/flux_api/: authentication.rs  balance.rs  deployment.rs  mod.rs
src/logger/src/: lib.rs
src/orchestrator_canister/: Cargo.toml
src/orchestrator_canister/src/: lib.rs
src/proxy_canister/: Cargo.toml  proxy_canister.did
src/proxy_canister/src/: lib.rs  requests.rs  state.rs  types.rs  utils.rs
src/proxy_canister/tests/: integration_tests.rs
src/proxy_canister/tests/test_user_canister/: Cargo.toml
src/proxy_canister/tests/test_user_canister/src/: lib.rs
src/proxy_canister/tests/utils/: actors.rs
src/proxy_canister_types/src/: lib.rs
src/test_canister/: Cargo.toml  test_canister.did
src/test_canister/src/: canister.rs  lib.rs
src/test_utils/: Cargo.toml
src/test_utils/src/: ic_env.rs  proxy_client.rs
