[workspace]
members = [
  "src/ic_side_services_backend",
  "src/flux_types",
  "src/http_over_ws",
  "src/logger",
  "src/test_canister",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-websocket-cdk = { git = "https://github.com/omnia-network/ic-websocket-cdk-rs/", branch = "feat/public-structs" }
serde_cbor = "0.11.2"
url = "2.5.0"
