[package]
name = "http_over_ws"
version = "0.0.1"
edition = { workspace = true }


[dependencies]
base64 = "0.21.5"
bs58 = "0.5.0"
candid = { workspace = true }
hex = "0.4.3"
ic-cdk = { workspace = true }
ic-cdk-timers = "0.4.0"
ic-websocket-cdk = { workspace = true }
lazy_static = "1.4.0"
ripemd = "0.1.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
url = "2.5.0"
logger = { path = "../logger" }




