[package]
name = "ic_side_services_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.5"
bs58 = "0.5.0"
candid = "0.9.3"
hex = "0.4.3"
ic-cdk = "0.10.0"
ic-websocket-cdk = "0.3.0"
ripemd = "0.1.3"
serde = "1.0.193"
sha2 = "0.10.8"
utc-dt = "0.2.1"
