[package]
name = "ic_side_services_backend"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.5"
bs58 = "0.5.0"
candid = "0.9.3"
flux_types = { path = "../flux_types" }
hex = "0.4.3"
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
ic-websocket-cdk = "0.3.2"
lazy_static = "1.4.0"
ripemd = "0.1.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
url = "2.5.0"
utc-dt = "0.2.1"
