[package]
name = "proxy_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
http_over_ws = { path = "../http_over_ws" }
serde = { workspace = true }
url = { workspace = true }
ic-websocket-cdk = { workspace = true }
logger = { workspace = true }
